tests/basic/semantics/divide_by_zero.diag
tests/basic/semantics/divide_by_zero.bas:1:14: error[B2002]: divide by zero
10 LET X = 1 / 0
             ^
