tests/basic/semantics/divide_by_zero.bas
10 LET X = 1 / 0
20 END
